Edited to be my PROJECT

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -9,13 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
      <!-- Site Metas -->
-    <title>Portfolio Project</title>  
+    <title>ZOE SPACE</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../images/FAITH2.jpg" type="image/x-icon" />
     <link rel="apple-touch-icon" href="../images/apple-touch-icon.png">
 
     <!-- Bootstrap CSS -->
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="../css/responsive.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../css/custom.css">
+    <link rel="stylesheet" href="../portfolio.css">
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -43,7 +44,7 @@
 	<header class="header header_style_01">
         <nav class="navbar header-nav navbar-expand-lg">
             <div class="container">
-				<a class="navbar-brand" href="index.html"><p>MYWEBSITE</p></a>
+				<a class="navbar-brand" href="index.html"><p>ZOE SPACE <h6>Bringing life to your ideas.</h6></p></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarApp" aria-controls="navbarApp" aria-expanded="false" aria-label="Toggle navigation">
 					<span></span>
 					<span></span>
@@ -60,11 +61,25 @@
             </div>
         </nav>
     </header>		
-	
-	
 
+    <section class="myWorks_display">
+        <a href="" class="myWork" title="testimonial grid">
+            <img src="../images/Screenshot (3).png" class="myImg" alt="work">
+        </a>
+        <a href="https://huddle-landing-faith.netlify.app/" target="_blank" class="myWork" title="Huddle Landing page">
+            <img src="../images/Screenshot (8).png" class="myImg" alt="work">
+        </a>
+        <a href="https://deluxe-custard-88e09e.netlify.app/" target="_blank" class="myWork" title="Preview Card">
+            <img src="../images/Screenshot (9).png" class="myImg" alt="work">
+        </a>
+        <div>
+            <p>
+                <h2> Above are few projects I've been able to practice with challenges from front-end mentor and Hertechtrail in-class assignment. Click on the image to check the hosted work.</h2>
 
-    
+            </p>
+        </div>
+    </section>
+
 	<footer class="footer">
 		<div class="container"> 
 			<div class="row"> 
@@ -89,7 +104,7 @@
             <div class="footer-distributed">
                 <div class="footer-left">                    
                     <p class="footer-company-name">Hertechtrail Academy Cohort 4 Project &copy; 2022</p>
-					<p class="footer-company-name">  Designed By : Maggy</p>
+					<p class="footer-company-name">  Designed By : Oluwatosin</p>
                 </div>
             </div>
         </div><!-- end container -->
