--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
      <!-- Site Metas -->
-    <title>Portfolio Project</title>  
+    <title>ZOE SPACE</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/FAITH3.jpg" type="image/x-icon" />
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 
     <!-- Bootstrap CSS -->
@@ -43,7 +43,7 @@
     <header class="header header_style_01">
         <nav class="navbar header-nav navbar-expand-lg">
             <div class="container">
-				<a class="navbar-brand" href="index.html"><p>MYWEBSITE</p></a>
+				<a class="navbar-brand" href="index.html"><p>ZOE SPACE <h6>Bringing life to your ideas.</h6></p></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarApp" aria-controls="navbarApp" aria-expanded="false" aria-label="Toggle navigation">
 					<span></span>
 					<span></span>
@@ -66,51 +66,52 @@
 			<li class="cd-hero__slide cd-hero__slide--selected js-cd-slide">
 				<div class="cd-hero__content cd-hero__content--half-width">
 					<h2>Welcome to my Space</h2>
-					<p>My name is Maggy and I'm a frontend developer and Coach.</p>
-					<a href="#0" class="hvr-bounce-to-right cd-hero__btn">Contact Me</a>
+					<p>My name is Faith. I'm a frontend developer and a writer.</p>
+					<a href="./pages/contact.html" class="hvr-bounce-to-right cd-hero__btn">Contact Me</a>
 					<div class="hero_icon">
-						<a href="#"><img src="./images/whatsapp.svg" alt="whatsapp" /></a>
-						<a href="#"><img src="./images/github.svg" alt="github" /></a>
-						<a href="#"><img src="./images/linkedin.svg" alt="linkedin" /></a>
+						<a href="#" target="_blank" title="08167969182"><img src="./images/whatsapp.svg" alt="whatsapp" /></a>
+						<a href="https://github.com/Ayokunmi8" target="_blank"><img src="./images/github.svg" alt="github" /></a>
+						<a href="https://www.facebook.com/faitholuwatosin.adewole" target="_blank"><img src="./images/facebook.svg" alt="Facebook" /></a>
 					</div>
 
 				</div> <!-- .cd-hero__content -->
 
 				<div class="cd-hero__content cd-hero__content--half-width cd-hero__content--img">
-					<img src="./images/hero.jpg" alt="hero" class="img-fluid" />
+					<img src="./images/FAITH1.jpg" alt="hero" class="img-fluid" />
 				</div> <!-- .cd-hero__content -->
 			</li>
 
 			<li class="cd-hero__slide js-cd-slide">
 				<div class="cd-hero__content cd-hero__content--half-width">
 					<h2>Welcome to my Space</h2>
-					<p>My name is Maggy and I'm a frontend developer and Coach.</p>
-					<a href="#0" class="hvr-bounce-to-right cd-hero__btn">Contact Me</a>
+					<p> Creating your responsive websites</p>
+					<a href="./pages/contact.html
+					" class="hvr-bounce-to-right cd-hero__btn">Contact Me</a>
 					<div>
 						<img src="./images/whatsapp.svg" alt="whatsapp" />
 					<img src="./images/github.svg" alt="github" />
-					<img src="./images/linkedin.svg" alt="linkedin" />
+					<!-- <img src="./images/facebook.svg" alt="Facebook" /> -->
 					</div>
 				</div> <!-- .cd-hero__content -->
 
 				<div class="cd-hero__content cd-hero__content--half-width cd-hero__content--img">
-					<img src="uploads/app_iphone_02.png" class="img-fluid" alt="tech 1">
+					<img src="/images/responsive image.png" class="img-fluid" alt="tech 1">
 				</div> <!-- .cd-hero__content -->
 			</li>
 
 			<li class="cd-hero__slide js-cd-slide">
 				<div class="cd-hero__content cd-hero__content--half-width cd-hero__content--img">
-					<img src="uploads/app_iphone_01.png" class="img-fluid" alt="tech 2">
+					<img src="/images/blog-phone.webp" class="img-fluid" alt="tech 2">
 				</div> <!-- .cd-hero__content -->
 
 				<div class="cd-hero__content cd-hero__content--half-width">
 					<h2>Welcome to my Space</h2>
-					<p>My name is Maggy and I'm a frontend developer and Coach.</p>
-					<a href="#0" class="hvr-bounce-to-right cd-hero__btn">Contact Me</a>
+					<p>Helping with your creative and content writings.</p>
+					<a href="./pages/contact.html" class="hvr-bounce-to-right cd-hero__btn">Contact Me</a>
 					<div>
 						<img src="./images/whatsapp.svg" alt="whatsapp" />
 					<img src="./images/github.svg" alt="github" />
-					<img src="./images/linkedin.svg" alt="linkedin" />
+					<!-- <img src="./images/facebook.svg" alt="Facebook" /> -->
 					</div>
 				</div> <!-- .cd-hero__content -->
 				
@@ -161,7 +162,7 @@
             <div class="footer-distributed">
                 <div class="footer-left">                    
                     <p class="footer-company-name">Hertechtrail Academy Cohort 4 Project &copy; 2022</p>
-					<p class="footer-company-name">  Designed By : Maggy</p>
+					<p class="footer-company-name">  Designed By : Oluwatosin</p>
                 </div>
             </div>
         </div><!-- end container -->
