--- a/pages/about.html
+++ b/pages/about.html
@@ -9,13 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
      <!-- Site Metas -->
-    <title>Portfolio Project</title>  
+    <title>ZOE SPACE</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../images/FAITH3.jpg" type="image/x-icon" />
     <link rel="apple-touch-icon" href="../images/apple-touch-icon.png">
 
     <!-- Bootstrap CSS -->
@@ -37,13 +37,13 @@
 
     <!-- LOADER -->
     <div id="preloader">
-        <img class="preloader" src="images/loaders/loader-app.gif" alt="">
+        <img class="preloader" src="/images/loaders/loader-app.gif" alt="">
     </div><!-- end loader -->
     <!-- END LOADER -->
 	<header class="header header_style_01">
         <nav class="navbar header-nav navbar-expand-lg">
             <div class="container">
-				<a class="navbar-brand" href="index.html"><p>MYWEBSITE</p></a>
+				<a class="navbar-brand" href="index.html"><p>ZOE SPACE <h6>Bringing life to your ideas.</h6></p></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarApp" aria-controls="navbarApp" aria-expanded="false" aria-label="Toggle navigation">
 					<span></span>
 					<span></span>
@@ -67,21 +67,22 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="section-title text-center">
-						<h3>About Us</h3>
-						<p>Lorem Ipsum dolroin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum<br>auctor nisi elit consequat ipsum, nec sagittis sem!</p>
+						<h3>About</h3>
+						<p>I'm Oluwatosin Faith, Adewole. An undergraduate student of Obafemi Awolowo University. I am a frontend developer(a beginner) and I write too. </p>
 					</div><!-- end title -->
 				</div>
 			</div>
 			<div class="row align-items-center">
 				<div class="col-lg-7 col-md-6">
 					<div class="about-left">
-						<img src="uploads/about-01.png" class="img-fluid" alt="" />
+						<img src="/images/web-tech-employed.jpg" class="img-fluid" alt="" />
 					</div>
 				</div>
 				<div class="col-lg-5 col-md-6">
 					<div class="about-right">
-						<h2>Easy customization </h2>
-						<p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem."</p>
+						<h2>A frontend developer?</h2>
+						<p>Yes! <br> I build  and design user friendly websites with the basic knowledge of HTML, CSS, Bootstrap and a bit of Javascript. I'm open to extensive learning, opportunities as a non-paid intern and designing your simple webpages.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -89,13 +90,15 @@
 			<div class="row align-items-center">
 				<div class="col-lg-5 col-md-6">
 					<div class="about-right">
-						<h2>Get started </h2>
-						<p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem."</p>
+						<h2>And a writer &#129300</h2>
+						<p> &#128077; &#127997; <br> You want to express your self in simple, understandable yet creative words? That is what I do. <br>I priortize simplicity and creative ways of writing. 
+						 You can visit my facebook timeline for beautiful contents. I'm available to put  down your thoughts into creative words, either personal works or as an intern in your company and learn more.
+						</p>
 					</div>
 				</div>
 				<div class="col-lg-7 col-md-6">
 					<div class="about-left">
-						<img src="uploads/about-02.png" class="img-fluid" alt="" />
+						<img src="/images/Writer.jpeg" class="img-fluid" alt="" />
 					</div>
 				</div>
 			</div>
@@ -115,14 +118,14 @@
 						<div class="card-header" id="headingOne">
 						  <h5 class="mb-0">
 							<a href="" class="btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-								What is the Start App ?
+								How Do I Get In Touch?
 							</a>
 						  </h5>
 						</div>
 
 						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
 						  <div class="card-body">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisl lorem, dictum id pellentesque at, vestibulum ut arcu. Curabitur erat libero, egestas eu tincidunt ac, rutrum ac justo. Vivamus condimentum laoreet lectus, blandit posuere tortor aliquam vitae. Curabitur molestie eros. 
+							Visit the homepage and connect with me on Whatsapp, facebook, and Github. You can reach me through my mail; adewole.of@gmail.com
 						  </div>
 						</div>
 					  </div>
@@ -130,13 +133,13 @@
 						<div class="card-header" id="headingTwo">
 						  <h5 class="mb-0">
 							<a href="" class="btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-								How to install this app ?
+								Ever Worked on a Project?
 							</a>
 						  </h5>
 						</div>
 						<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
 						  <div class="card-body">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisl lorem, dictum id pellentesque at, vestibulum ut arcu. Curabitur erat libero, egestas eu tincidunt ac, rutrum ac justo. Vivamus condimentum laoreet lectus, blandit posuere tortor aliquam vitae. Curabitur molestie eros. 
+							I've taken up challenges on front-end mentor to practice. Check the portfolio page to see few of the hosted projects.
 						  </div>
 						</div>
 					  </div>
@@ -144,13 +147,13 @@
 						<div class="card-header" id="headingThree">
 						  <h5 class="mb-0">
 							<a href="" class="btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-							  Lorem ipsum dolor sit amet
+							  What is your Niche in writing?
 							</a>
 						  </h5>
 						</div>
 						<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
 						  <div class="card-body">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisl lorem, dictum id pellentesque at, vestibulum ut arcu. Curabitur erat libero, egestas eu tincidunt ac, rutrum ac justo. Vivamus condimentum laoreet lectus, blandit posuere tortor aliquam vitae. Curabitur molestie eros. 
+							 I write mostly on Faith, relationship and lifestyle generally. I write fiction stories too.
 						  </div>
 						</div>
 					  </div>
@@ -158,7 +161,7 @@
 				</div>
 				<div class="col-lg-6 col-md-6">
 					<div class="faq-right">
-						<img src="uploads/about-02.png" class="img-fluid" alt="" />
+						<img src="/images/software-development.png" class="img-fluid" alt="" />
 					</div>
 				</div>
 			</div>
@@ -190,7 +193,7 @@
             <div class="footer-distributed">
                 <div class="footer-left">                    
                     <p class="footer-company-name">Hertechtrail Academy Cohort 4 Project &copy; 2022</p>
-					<p class="footer-company-name">  Designed By : Maggy</p>
+					<p class="footer-company-name">  Designed By : Oluwatosin</p>
                 </div>
             </div>
         </div><!-- end container -->
