--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,13 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
      <!-- Site Metas -->
-    <title>Portfolio Project</title>  
+    <title>ZOE SPACE</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../images/FAITH3.jpg" type="image/x-icon" />
     <link rel="apple-touch-icon" href="../images/apple-touch-icon.png">
 
     <!-- Bootstrap CSS -->
@@ -43,7 +43,7 @@
 	<header class="header header_style_01">
         <nav class="navbar header-nav navbar-expand-lg">
             <div class="container">
-				<a class="navbar-brand" href="index.html"><p>MYWEBSITE</p></a>
+				<a class="navbar-brand" href="index.html"><p>ZOE SPACE <h6>Bringing life to your ideas.</h6></p></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarApp" aria-controls="navbarApp" aria-expanded="false" aria-label="Toggle navigation">
 					<span></span>
 					<span></span>
@@ -67,7 +67,7 @@
     <div class="container">
         <div class="section-title text-center">
             <h3>Get in Touch</h3>
-            <div class="info-box" data-toggle="tooltip" data-placement="bottom" title="Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.">
+            <div class="info-box" data-toggle="tooltip" data-placement="bottom" title="Get in touch directly with Faith.">
                 <i class="fa fa-question-circle" aria-hidden="true"></i>
             </div>
         </div><!-- end title -->
@@ -91,10 +91,10 @@
                                 <input type="text" name="phone" id="phone" class="form-control" placeholder="Your Phone">
                             </div>
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                <textarea class="form-control" name="comments" id="comments" rows="6" placeholder="Give us more details.."></textarea>
+                                <textarea class="form-control" name="comments" id="comments" rows="6" placeholder="More details.."></textarea>
                             </div>
                             <div class="text-center pdi">
-                                <button type="submit" value="SEND" id="submit" class="hvr-bounce-to-right get-btn">Get a Quote</button>
+                                <button type="submit" value="SEND" id="submit" class="hvr-bounce-to-right get-btn">Let's Talk</button>
                             </div>
                         </div>
                     </form>
@@ -129,7 +129,7 @@
         <div class="footer-distributed">
             <div class="footer-left">                    
                 <p class="footer-company-name">Hertechtrail Academy Cohort 4 Project &copy; 2022</p>
-                <p class="footer-company-name">  Designed By : Maggy</p>
+                <p class="footer-company-name">  Designed By : Oluwatosin</p>
             </div>
         </div>
     </div><!-- end container -->
