--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -63,7 +63,7 @@
     </header>		
 
     <section class="myWorks_display">
-        <a href="" class="myWork" title="testimonial grid">
+        <a href="https://darling-crisp-7618f5.netlify.app/" target="_blank" class="myWork" title="testimonial grid">
             <img src="../images/Screenshot (3).png" class="myImg" alt="work">
         </a>
         <a href="https://huddle-landing-faith.netlify.app/" target="_blank" class="myWork" title="Huddle Landing page">
