--- a/pages/about.html
+++ b/pages/about.html
@@ -68,7 +68,7 @@
 				<div class="col-lg-12">
 					<div class="section-title text-center">
 						<h3>About</h3>
-						<p>I'm Oluwatosin Faith, Adewole. An undergraduate student of Obafemi Awolowo University. I am a frontend developer(a beginner) and I write too. </p>
+						<p><b>I'm Oluwatosin Faith, Adewole. An undergraduate student of Obafemi Awolowo University. I am a frontend developer(a beginner) and I write too. </b></p>
 					</div><!-- end title -->
 				</div>
 			</div>
